assets folder configured

--- a/customers/templates/includes/inc.artwork.html
+++ b/customers/templates/includes/inc.artwork.html
@@ -2,7 +2,7 @@
     <h2>Upload an Artwork</h2>
 </div>
 
-<form class="w3-container" id="project" name="project" method="post" action="upload-again.php" enctype="multipart/form-data">
+<form class="w3-container" id="project" name="project" method="post" action="upload.php" enctype="multipart/form-data">
     <p>
         <input class="w3-input" name="concepts[]" type="file" value="Upload a Concept" placeholder="concept.zip" />
         <label class="w3-text-blue">Browse your Artwork (.zip format)</label>
