--- a/customers/templates/privacy.html
+++ b/customers/templates/privacy.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{$company_name} - Privacy Policy</title>
-    <meta name="description" content="{$company_description}" />
+    <title>{$company['name']} - Privacy Policy</title>
+    <meta name="description" content="{$company['description']}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="css/w3.css" />
-    <link rel="stylesheet" href="css/customer.css" />
+    <link rel="stylesheet" href="{$websites['assets']}/css/w3.css" />
+    <link rel="stylesheet" href="{$websites['assets']}/css/customer.css" />
 </head>
 <body class="customer-privacy">
     <div class="w3-container w3-blue">
