--- a/customers/templates/index.html
+++ b/customers/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{$company_name} - {$company_title}</title>
-    <meta name="description" content="{$company_description}" />
+    <title>{$company['name']} - {$company['title']}</title>
+    <meta name="description" content="{$company['description']}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="css/w3.css" />
-    <link rel="stylesheet" href="css/customer.css" />
+    <link rel="stylesheet" href="{$websites['assets']}/css/w3.css" />
+    <link rel="stylesheet" href="{$websites['assets']}/css/customer.css" />
 </head>
 <body class="customer-index">
     <div class="w3-container w3-blue">
@@ -40,7 +40,7 @@
                         <h2>Open in Mobile</h2>
                     </div>
                     <div class="w3-padding">
-                        <p><img src="images/qr.png" class="w3-border w3-border-red" /></p>
+                        <p><img src="{$websites['assets']}/images/customers/qr.png" class="w3-border w3-border-red" /></p>
                         <p>Scan the image with a QR Reader.</p>
                     </div>
                 </div>
