admin templates css link fix

--- a/customers/templates/includes/inc.project.html
+++ b/customers/templates/includes/inc.project.html
@@ -40,7 +40,7 @@
     {else}
         <h2>Please wait for a Payment</h2>
         <p>Wait until your project is estimated, definitely...</p>
-        <p><a href="#">I am in a hurry! Please estimate it faster!</a></p>
+        <p>I am in a hurry! <a href="#">Please estimate it faster!</a></p>
     {/if}
 {/if}
 
