--- a/customers/templates/join.html
+++ b/customers/templates/join.html
@@ -12,7 +12,7 @@
     <div class="w3-container w3-blue">
         <div class="w3-row">
             <div class="w3-col l6 s12">
-                <h1><a href="index.php">{$company_name}</a></h1>
+                <h1><a href="index.php">{$company['name']}</a></h1>
             </div>
             <div class="w3-col l6 s12">
                 <div class="w3-right">
