--- a/admin/templates/developers.html
+++ b/admin/templates/developers.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="w3-container w3-white">
-        <p>&copy; 2020 - {$current_year}, {$company_name}. All rights reserved.</p>
+        <p>&copy; 2020 - {$current_year}, {$company['name']}. All rights reserved.</p>
     </div>
 </body>
 </html>
