--- a/customers/templates/projects-dues.html
+++ b/customers/templates/projects-dues.html
@@ -54,7 +54,7 @@
 {/foreach}
 </tbody>
 </table>
-<p><strong>Projects got Estimated</strong> - please make a prompt payment so that we can work out on your project.</p>
+<p><strong>Projects got Estimated</strong> - please make a prompt payment so that we can work out on your project. Also, please pay the projects individually.</p>
 
             </div>
         </div>
