--- a/admin/templates/project.html
+++ b/admin/templates/project.html
@@ -89,6 +89,7 @@
     <input type="hidden" name="project_id" value="{$project->id}" />
     <input type="submit" name="askpayment" value="Ask Payment" class="w3-btn w3-teal" />
 </form>
+<p>This will send an instant email to the customer.</p>
 {else}
 <h2 class="w3-text-red">Terminated</h2>
 <p>This project has been terminated. No further actions are required.</p>
