--- a/customers/templates/includes/inc.project.html
+++ b/customers/templates/includes/inc.project.html
@@ -37,7 +37,7 @@
     {if $project->paid}
         <h2>Payment Already Made?</h2>
         <p class="w3-text-green">
-            It seems that you might have paid at least one installment.
+            It seems that you have paid at least one installment.
             Please wait until your project is (re)estimated...
         </p>
     {else}
