--- a/customers/templates/profile.html
+++ b/customers/templates/profile.html
@@ -33,7 +33,7 @@
                 <form class="w3-container" name="password-change" method="post" action="password-change.php">
                     <p>
                         <input name="password[old]" class="w3-input" type="password" />
-                        <label>Old Password</label>
+                        <label>Current Password</label>
                     </p>
                     <p>
                         <input name="password[new]" class="w3-input" type="password" />
@@ -41,7 +41,7 @@
                     </p>
                     <p>
                         <input name="password[confirm]" class="w3-input" type="password" />
-                        <label>Confirm Password</label>
+                        <label>Confirm New Password</label>
                     </p>
                     <p>
                         <input name="change" class="w3-btn w3-blue" type="submit" value="Change my Password" />
