--- a/admin/templates/customers.html
+++ b/admin/templates/customers.html
@@ -47,7 +47,7 @@
                 </tr>
                 {foreachelse}
                 <tr>
-                    <td colspan="4">No projects.</td>
+                    <td colspan="4">No customers / projects.</td>
                 </tr>
                 {/foreach}
                 </tbody>
