--- a/admin/templates/includes/inc.menus.html
+++ b/admin/templates/includes/inc.menus.html
@@ -14,4 +14,5 @@
 <p><a class="w3-btn w3-teal" href="payments.php">Payments Received</a></p>
 <p><a class="w3-btn w3-teal" href="developers.php">Developers</a></p>
 <p><a class="w3-btn w3-teal" href="info.php">Info</a></p>
+<p><a class="w3-btn w3-blue" href="{$websites['customer']}">Customer Portal</a></p>
 </div>
