Customer name after login

--- a/customers/templates/index.html
+++ b/customers/templates/index.html
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    {include file="includes/inc.session.html"}
     <div class="w3-container w3-light-gray">
         <div class="w3-row">
             <div class="w3-col l6 s12 w3-panel">
