--- a/customers/templates/projects-dues.html
+++ b/customers/templates/projects-dues.html
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    {include file="includes/inc.session.html"}
     <div class="w3-container w3-light-gray">
         <div class="w3-row">
             <div class="w3-col l2 s12 w3-panel">
@@ -54,7 +55,11 @@
 {/foreach}
 </tbody>
 </table>
-<p><strong>Projects got Estimated</strong> - please make a prompt payment so that we can work out on your project. Also, please pay the projects individually.</p>
+<h3>If your project got estimated</h3>
+<ul>
+    <li>Please make a prompt payment so that we can work out on your project.</li>
+    <li>Also, please pay the projects individually.</li>
+</ul>
 
             </div>
         </div>
