--- a/customers/templates/contact.html
+++ b/customers/templates/contact.html
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    {include file="includes/inc.session.html"}
     <div class="w3-container w3-light-gray">
         {foreach $contacts as $contact}
         <div class="w3-panel">
