--- a/customers/templates/login.html
+++ b/customers/templates/login.html
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    {include file="includes/inc.session.html"}
     <div class="w3-container w3-light-gray">
         {include file="includes/inc.login.html"}
     </div>
