--- a/customers/templates/tnc.html
+++ b/customers/templates/tnc.html
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    {include file="includes/inc.session.html"}
     <div class="w3-container w3-light-gray">
         <div class="w3-panel">
             <h1>Terms and Conditions</h1>
