--- a/customers/templates/includes/inc.session.html
+++ b/customers/templates/includes/inc.session.html
@@ -1,1 +1,1 @@
-<div class="w3-container w3-black">Customer Name</div>
+<div class="w3-container w3-black w3-padding">{$smarty.session.name|default:"Not logged in"}</div>
