--- a/customers/templates/projects-dues.html
+++ b/customers/templates/projects-dues.html
@@ -55,7 +55,7 @@
 {/foreach}
 </tbody>
 </table>
-<h3>If your project got estimated</h3>
+<h3 class="w3-text-green">If your project got estimated...</h3>
 <ul>
     <li>Please make a prompt payment so that we can work out on your project.</li>
     <li>Also, please pay the projects individually.</li>
