--- a/customers/templates/includes/inc.login.html
+++ b/customers/templates/includes/inc.login.html
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form name="login" method="post" action="login.php">
+<form name="login" method="post" action="{$websites['customer']}/login.php">
     <p>
         <input class="w3-input" name="email" value="{$login['email']}" placeholder="john.doe@example.com" type="email" />
         <label>Email</label>
