--- a/customers/templates/includes/inc.projects.html
+++ b/customers/templates/includes/inc.projects.html
@@ -1,4 +1,12 @@
 <h1>My Projects</h1>
+
+<div class="w3-black w3-padding">
+    <a class="w3-btn w3-blue" href="#">All (100)</a>
+    <a class="w3-btn w3-teal" href="#">Dues (20)</a>
+    <a class="w3-btn w3-purple" href="#">Paid (40)</a>
+    <a class="w3-btn w3-yellow" href="#">Terminated (40)</a>
+</div>
+
 <table class="w3-table w3-bordered w3-striped w3-border">
 <thead class="w3-blue">
 <tr>
