--- a/customers/templates/includes/inc.artwork.html
+++ b/customers/templates/includes/inc.artwork.html
@@ -19,8 +19,9 @@
     </p>
     <p class="info">You will receive a confirmation link in this email address.</p>
 
-    <h3>Agreements</h3>
+    <h3>Legal Agreements / Implied Consents</h3>
     <p class="info">By creating a project, you agree to our <a href="tnc.php">terms and conditions</a>, <a href="privacy.php">privacy policy</a> and payment requirements.</p>
+    <p class="info">You are filling this form on your behalf only.</p>
 
     <p>
         <input type="hidden" name="MAX_FILE_SIZE" value="‭8388608‬" />
@@ -36,5 +37,10 @@
         <strong>Your artwork remains your property.</strong>
         We will convert your concept into website or application <strong>for you</strong> based on the artwork you provide, at your expense (payment).
         <a href="about.php">Details</a>
+    </div>
+
+    <h3>Automated Email Notifications</h3>
+    <div class="info">
+        <p>This tool is based on automated email delivery. Please whitelist our domain name for your inbox. Often check your spam/junk folder.</p>
     </div>
 </div>
