--- a/developer/templates/projects.html
+++ b/developer/templates/projects.html
@@ -5,8 +5,8 @@
     <title>{$company_name} - {$company_title}</title>
     <meta name="description" content="{$company_description}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="css/w3.css" />
-    <link rel="stylesheet" href="css/slicing.css" />
+    <link rel="stylesheet" href="{$websites['assets']}/css/w3.css" />
+    <link rel="stylesheet" href="{$websites['assets']}/css/developer.css" />
 </head>
 <body class="customer-projects">
     <div class="w3-container w3-purple">
