--- a/customers/templates/includes/inc.artwork.html
+++ b/customers/templates/includes/inc.artwork.html
@@ -19,7 +19,7 @@
     </p>
     <p class="info">You will receive a confirmation link in this email address.</p>
 
-    <h3>Legal Agreements / Implied Consents</h3>
+    <h3>Legal Agreements and Implied Consents</h3>
     <p class="info">By creating a project, you agree to our <a href="tnc.php">terms and conditions</a>, <a href="privacy.php">privacy policy</a> and payment requirements.</p>
     <p class="info">You are filling this form on your behalf only.</p>
 
