--- a/admin/templates/estimations.html
+++ b/admin/templates/estimations.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="w3-container w3-white">
-        <p>&copy; 2020 - {$current_year}, {$company['name']}. All rights reserved.</p>
+        {include file="includes/inc.footer.html"}
     </div>
 </body>
 </html>
