--- a/admin/templates/project.html
+++ b/admin/templates/project.html
@@ -157,18 +157,7 @@
         </div>
     </div>
     <div class="w3-container w3-white">
-        <div class="w3-row">
-            <div class="w3-col l6">
-                <p>&copy; 2020 - {$current_year}, {$company['name']}. All rights reserved.</p>
-            </div>
-            <div class="w3-col l6">
-                <div class="w3-right">
-                    <a href="about.php" class="w3-btn w3-white">About</a>
-                    <a href="support.php" class="w3-btn w3-white">Support</a>
-                    <a href="contact.php" class="w3-btn w3-white">Contact Us</a>
-                </div>
-            </div>
-        </div>
+        {include file="includes/inc.footer.html"}
     </div>
 </body>
 </html>
