--- a/customers/templates/includes/inc.footer.html
+++ b/customers/templates/includes/inc.footer.html
@@ -1,6 +1,6 @@
         <div class="w3-row">
             <div class="w3-col l6">
-                <p>&copy; 2020 - {$current_year}, {$company['name']}. All rights reserved.</p>
+                <p>&copy; 2020 - {"Y"|date}, {$company['name']}. All rights reserved.</p>
             </div>
             <div class="w3-col l6">
                 <div class="w3-right">
