--- a/developer/templates/projects.html
+++ b/developer/templates/projects.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="w3-container w3-white">
-        <p>&copy; 2020 - {$current_year}, {$company_name}. All rights reserved.</p>
+        <p>&copy; 2020 - {"Y"|date}, {$company_name}. All rights reserved.</p>
     </div>
 </body>
 </html>
