Project by status

--- a/admin/templates/includes/inc.menus.html
+++ b/admin/templates/includes/inc.menus.html
@@ -7,10 +7,11 @@
 -->
 <p><a class="w3-btn w3-teal" href="artworks.php">Artworks -  Files</a></p>
 <p><a class="w3-btn w3-teal" href="customers.php">Customers</a></p>
-<p><a class="w3-btn w3-teal" href="projects-estimations.php">Pending Estimations</a></p>
-<p><a class="w3-btn w3-teal" href="projects-estimated.php">Estimated Projects</a></p>
-<p><a class="w3-btn w3-teal" href="projects-recent.php">Recent Projects</a></p>
-<p><a class="w3-btn w3-teal" href="projects-terminations.php">Terminated Projects</a></p>
+<p><a class="w3-btn w3-teal" href="projects.php">Projects</a></p>
+<!--<p><a class="w3-btn w3-teal" href="projects-estimations.php">Pending Estimations</a></p>-->
+<!--<p><a class="w3-btn w3-teal" href="projects-estimated.php">Estimated Projects</a></p>-->
+<!--<p><a class="w3-btn w3-teal" href="projects-list.php">Recent Projects</a></p>-->
+<!--<p><a class="w3-btn w3-teal" href="projects-terminations.php">Terminated Projects</a></p>-->
 <p><a class="w3-btn w3-teal" href="payments.php">Payments Received</a></p>
 <p><a class="w3-btn w3-teal" href="developers.php">Developers</a></p>
 <p><a class="w3-btn w3-teal" href="info.php">Info</a></p>
