--- a/admin/templates/projects.html
+++ b/admin/templates/projects.html
@@ -28,13 +28,16 @@
             </div>
             <div class="w3-col l10 s12 w3-panel">
                 <h1>Recent Projects</h1>
+                <a href="#">Recent / Pending Estimations</a> | <a href="#">Estimated</a> | <a href="#">Paid</a> | <a href="#">Terminated</a>
                 <table class="w3-table w3-bordered w3-striped w3-border">
                 <thead class="w3-teal">
                 <tr>
                     <th>SN</th>
                     <th>Project Name</th>
-                    <th>Budget</th>
+                    <th>Dues</th>
+                    <th>Paid</th>
                     <th>Opened On</th>
+                    <th>Status</th>
                 </tr>
                 </thead>
                 <tbody class="w3-white">
@@ -43,11 +46,13 @@
                     <td>{$p+1}</td>
                     <td><a href="project.php?id={$project->id}">{$project->name}</a></td>
                     <td>{$project->budget|currency}</td>
+                    <td>{$project->paid|currency}</td>
                     <td>{$project->date}</td>
+                    <td>{$project->terminated|termination_reason}</td>
                 </tr>
                 {foreachelse}
                 <tr>
-                    <td colspan="4">No projects.</td>
+                    <td colspan="6">No projects.</td>
                 </tr>
                 {/foreach}
                 </tbody>
